<resources>
    <string name="app_name" translatable="false">Explainer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules">Rules</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue</string>
    <string name="rules_introduction">Explainer is an educational team word game in which player needs to explain and team should guess as many words as possible over a period of time.\n\n For each correct word team gets a point. The team with the highest number of points wins.\n\n When player explains he cannot use cognate words, translate into another language and explicitly show words with gestures.</string>
    <string name="points_title">Scoring</string>
    <string name="points_text">- Team gets 1 point for every guessed word. When word skips, point minuses.\n\n- If team has not enough time to guess last word, team gets 0 points.</string>
    <string name="winner_title">Winner</string>
    <string name="winner_text">Game keeps before one of team get enough points to win. If in the moment round finishing teams has the same points, additional round starts.</string>
    <string name="controversial_points_title">Controversial points</string>
    <string name="controversial_points_text">If the controversial points happened, for example using of implicit cognate word - you can redact result after time ends. Use option "take away the word" to count 0 team points.</string>
    <string name="dictionary_title">Dictionary</string>
    <string name="select_dictionary">Select dictionary</string>
    <string name="tab_en" translatable="false">EN</string>
    <string name="tab_ua" translatable="false">UA</string>
    <string name="team_title">Teams</string>
    <string name="add_team">Add team</string>
    <string name="team_name">Team name</string>
    <string name="settings">Settings</string>
    <string name="round_duration">Round duration</string>
    <string name="plus_1_min">+1 min</string>
    <string name="minus_1_min">-1 min</string>
    <string name="minute">min</string>
    <string name="one">1</string>
    <string name="start_game">Start game</string>
    <string name="play_next">Play next</string>
    <string name="team">Team</string>
    <string name="zero">0</string>
    <string name="finish">Finish</string>
    <string name="new_game_question">Do you want to start a new game?</string>
    <string name="game_clear">Current game will be clear</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit_to_menu">Exit to menu?</string>
    <string name="game_progress_lose">Round progress will be lost</string>
    <string name="please_choose_dictionary">Please choose dictionary</string>
    <string name="please_add_team">Please add at least one team</string>
    <string name="please_choose_team">Please choose team</string>
    <string name="pause">Pause</string>

</resources>