<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screen_rules.RulesFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/rules_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back_icon"
            app:title="@string/rules"
            app:titleTextColor="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rules_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rules_introduction"
                    android:textColor="@color/dirty_green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/rules_points_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/points_title"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rules_points_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/points_text"
                    android:textColor="@color/dirty_green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/rules_winner_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/winner_title"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rules_winner_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/winner_text"
                    android:textColor="@color/dirty_green"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/rules_controversial_points_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/controversial_points_title"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rules_controversial_points_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controversial_points_text"
                    android:textColor="@color/dirty_green"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>