<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pastel"
        tools:context=".presentation.screen_rules.NewGameFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/new_game_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back_icon"
            app:title="@string/new_game"
            app:titleTextColor="@color/white" />

        <Button
            android:id="@+id/new_game_start_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/start_game_button"
            android:backgroundTint="@color/emerald"
            android:text="@string/start_game"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_game_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/new_game_dictionary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dictionary_title"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/new_game_dictionary_choice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:text="@string/select_dictionary"
                    android:textColor="@color/emerald"
                    android:textSize="20sp"
                    app:drawableEndCompat="@drawable/arrow_forward"
                    app:drawableStartCompat="@drawable/dictionary_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_game_dictionary_title" />

                <TextView
                    android:id="@+id/new_game_team_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/team_title"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_game_dictionary_choice" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/new_game_teams_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/new_game_team_title">

                </androidx.recyclerview.widget.RecyclerView>

                <ImageView
                    android:id="@+id/new_game_add_team_button"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/new_game_new_team_edit_text"
                    app:layout_constraintStart_toStartOf="@+id/new_game_teams_recycler_view"
                    app:layout_constraintTop_toTopOf="@+id/new_game_new_team_edit_text"
                    app:srcCompat="@drawable/plus_button" />

                <EditText
                    android:id="@+id/new_game_new_team_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/add_team"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/emerald"
                    android:textColorHint="@color/emerald"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/new_game_add_team_button"
                    app:layout_constraintTop_toBottomOf="@+id/new_game_teams_recycler_view" />

<!--                <Button-->
<!--                    android:id="@+id/new_game_add_team_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="35dp"-->
<!--                    android:background="@drawable/rounded_button"-->
<!--                    android:backgroundTint="@color/emerald"-->
<!--                    android:text="@string/add_team"-->
<!--                    android:textColor="@color/white"-->
<!--                    app:layout_constraintBottom_toBottomOf="@+id/new_game_new_team_edit_text"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@+id/new_game_teams_recycler_view"-->
<!--                    tools:ignore="TouchTargetSizeCheck" />-->

                <TextView
                    android:id="@+id/new_game_settings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/settings"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_game_new_team_edit_text" />

                <TextView
                    android:id="@+id/new_game_round_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:gravity="center_vertical"
                    android:minHeight="48dp"
                    android:text="@string/round_duration"
                    android:textColor="@color/emerald"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/ic_baseline_timer_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_game_settings_title" />

                <Button
                    android:id="@+id/new_game_time_plus_button"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/emerald"
                    android:text="@string/plus_1_min"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_game_round_duration"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/new_game_time_minus_button"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/emerald"
                    android:text="@string/minus_1_min"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/new_game_time_plus_button"
                    app:layout_constraintTop_toBottomOf="@+id/new_game_round_duration"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/new_game_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/minute"
                    android:textColor="@color/dark_green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/new_game_round_duration" />

                <TextView
                    android:id="@+id/new_game_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:textColor="@color/dark_green"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="@+id/new_game_minute"
                    app:layout_constraintEnd_toStartOf="@+id/new_game_minute" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>