<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pastel"
        tools:context=".presentation.screen_home.ui.HomeFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/home_page_logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/home_page_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/emerald"
            android:text="@string/continue_game"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/home_page_new_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/home_page_new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/emerald"
            android:text="@string/new_game"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/home_page_rules_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/home_page_rules_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/rounded_button"
            android:text="@string/rules"
            android:textColor="@color/emerald"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>