<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screen_game.ui.GameFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/game_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back_icon"
            app:title="@string/new_game"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/game_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_timer"
            android:gravity="center"
            android:text="@string/one"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/game_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/game_toolbar"
            app:layout_constraintTop_toTopOf="@+id/game_toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/game_word_card"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_toolbar"
            app:layout_constraintVertical_bias="0.4">

            <TextView
                android:id="@+id/game_word_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/pastel"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/game_true_answer_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/game_word_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_toolbar">

        </FrameLayout>

        <FrameLayout
            android:id="@+id/game_false_answer_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_word_card">

        </FrameLayout>

        <ImageView
            android:id="@+id/game_drop_up_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/game_word_card"
            app:layout_constraintEnd_toEndOf="@+id/game_word_card"
            app:layout_constraintStart_toStartOf="@+id/game_word_card"
            app:srcCompat="@drawable/drop_up" />

        <ImageView
            android:id="@+id/game_drop_down_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/game_word_card"
            app:layout_constraintStart_toStartOf="@+id/game_word_card"
            app:layout_constraintTop_toBottomOf="@+id/game_word_card"
            app:srcCompat="@drawable/drop_down" />

        <TextView
            android:id="@+id/game_true_answer_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_true_answer"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/game_word_card"
            app:layout_constraintEnd_toStartOf="@+id/game_word_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_toolbar" />

        <TextView
            android:id="@+id/game_false_answer_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_false_answer"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/zero"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/game_word_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_word_card" />

        <ImageView
            android:id="@+id/game_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/game_timer"
            app:layout_constraintTop_toBottomOf="@+id/game_toolbar"
            app:srcCompat="@drawable/pause_circle_filled" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>